--- a/1-app-electron/index.html
+++ b/1-app-electron/index.html
@@ -36,8 +36,8 @@
                                 electron
                             } = process.versions;
                             document.querySelector('#nodeVersion').innerHTML = node;
-                            document.querySelector('#chromeVersion).innerHTML = chrome;
-                                document.querySelector('#electronVersion).innerHTML = electron;
+                            document.querySelector('#chromeVersion').innerHTML = chrome;
+                                document.querySelector('#electronVersion').innerHTML = electron;
                                 });
 
             </script>
@@ -47,8 +47,8 @@
             <div id="banner">Electron is up and running</div>
             <div id="shellInfo">
                 <div>Node : <span id="nodeVersion"></span></div>
-                <div>Chrome : <span id="chromVersion"></span>div>
-                    <div>Electron : <span id="electronVersion"></span>div>
+                <div>Chrome : <span id="chromeVersion"></span>
+                    <div>Electron : <span id="electronVersion"></span>
                     </div>
         </body>
-        This is a simple HT
+            </html>
